# django-backend

./: pyproject.toml
config/: settings.py  urls.py
houses/: models.py
houses/migrations/: 0001_initial.py  0002_rename_price_house_price_per_night.py  0003_house_pets_allowed.py
mqtt/: urls.py  views.py
mqtt/templates/: pub.html
